--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "next": "10.0.5",
+    "next-seo": "^4.26.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
