--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-masonry-component": "^6.2.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
