--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "next": "12.0.7",
+    "next-response-helpers": "^0.1.3",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
