update meta info

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-tailwind-typescript-example",
+  "name": "sz-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
