--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "date-fns": "^2.27.0",
+    "front-matter": "^4.0.2",
     "next": "12.0.7",
     "next-response-helpers": "^0.1.3",
     "next-seo": "^4.26.0",
@@ -17,6 +19,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-masonry-component": "^6.3.0",
+    "remark": "^14.0.2",
+    "strip-markdown": "^5.0.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
