--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-masonry-component": "^6.3.0",
+    "rehype-stringify": "^9.0.2",
     "remark": "^14.0.2",
+    "remark-footnotes": "^4.0.1",
+    "remark-html": "^15.0.1",
+    "remark-rehype": "^10.1.0",
     "strip-markdown": "^5.0.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^3.0.7"
   }
