--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.0.7",
     "next-response-helpers": "^0.1.3",
     "next-seo": "^4.26.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
